FullSb1-27-apr-15/src/objects/Acceptance_Letter__c.object
<CustomObject>
    <fields>
        <fullName>Acceptance_Letter__c</fullName>
        <label>Acceptance Letter for:</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Application__c</fullName>
        <label>Application</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Acceptance Letters</relationshipLabel>
        <relationshipName>Acceptance_Letters</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date_Letter_Sent_Attached__c</fullName>
        <label>Date Letter Sent/Attached</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Letter_Title__c</fullName>
        <label>Letter Title</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Acceptance Letter</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>AL-{000000}</displayFormat>
        <label>Acceptance Letter  Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Acceptance Letters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>